# ai-limits-dashboard

./: .gitignore  AGENTS.md  README.md  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  turbo.json  vitest.config.ts
.cursor/rules/: provider-patterns.mdc  tauri-conventions.mdc  testing.mdc  typescript-standards.mdc
.github/workflows/: ci.yml  release.yml
apps/android/: package.json  settings.gradle.kts
apps/android/app/: build.gradle.kts
apps/android/app/src/main/: AndroidManifest.xml
apps/android/app/src/main/java/com/ailimits/dashboard/: AiLimitsApplication.kt
apps/android/app/src/main/java/com/ailimits/dashboard/data/: AggregatedState.kt  ProviderConfig.kt  UsageSnapshot.kt
apps/android/app/src/main/java/com/ailimits/dashboard/provider/: AnthropicProvider.kt  GeminiProvider.kt  OpenAIProvider.kt  ProviderRegistry.kt  UsageProvider.kt  ZaiProvider.kt
apps/android/app/src/main/java/com/ailimits/dashboard/repository/: ConfigRepository.kt  UsageRepository.kt
apps/android/app/src/main/res/drawable/: ic_launcher_foreground.xml
apps/android/app/src/main/res/values/: strings.xml  themes.xml
apps/android/app/src/main/res/xml/: widget_info.xml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/scripts/: gen-icons.js
apps/desktop/src/: App.tsx  SettingsScreen.tsx  index.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs  taskbar_overlay.rs
e2e/: README.md  wdio.conf.ts
(+4 files in other folders)
