[package]
name = "ai-limits-desktop"
version = "0.1.0"
description = "AI Limits Dashboard - desktop widget"
edition = "2021"
rust-version = "1.70"

[lib]
name = "ai_limits_desktop_lib"
crate-type = ["staticlib", "cdylib", "lib"]

[build-dependencies]
tauri-build = { version = "2", features = ["codegen"] }

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-store = "2"

[features]
default = []
